--- a/index.html
+++ b/index.html
@@ -8,42 +8,57 @@
   
   <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  Join our community
+  <article class="container">
+    <section class="container__top">
+        <header><h2 class="text-big text-cyan">Join our community</h2></header>
 
-  30-day, hassle-free money back guarantee
+        <p class="text-medium text-green">30-day, hassle-free money back guarantee</p> 
+        <p class="text-normal text-gray">Gain access to our full library of tutorials along with expert code reviews. 
+        Perfect for any developers who are serious about honing their skills.</p> 
+    </section>
+    <section class="container__middle text-white">
+          <header><h2 class="text-medium ">Monthly Subscription</h2></header>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+          <p><span class="text-extra-big">&dollar;29 </span><span class="text-normal text-transparent">per month</span> </p>
 
-  Monthly Subscription
+          <p class="text-normal">Full access for less than &dollar;1 a day</p> 
 
-  &dollar;29 per month
+          <a href="https://youtu.be/NoG-IfltW0Q" class="btn-cta  text-medium">Sign Up</a> 
+    </section>
+    <section class="container__bot text-white">
+          <header><h2 class="text-medium">Why Us</h2></header>
+          <ul class="list">
+            <li class="list__item text-normal">Tutorials by industry experts</li>
+            <li class="list__item text-normal">Peer &amp; expert code review</li>
+            <li class="list__item text-normal">Coding exercises</li>
+            <li class="list__item text-normal">Access to our GitHub repos</li>
+            <li class="list__item text-normal">Community forum</li>
+            <li class="list__item text-normal">Flashcard decks</li>
+            <li class="list__item text-normal">New videos every week</li>  
+                 
+    </section>
+          </ul>
+          
 
-  Full access for less than &dollar;1 a day
+  </article>
 
-  Sign Up
 
-  Why Us
 
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
+
+
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://youtu.be/laswxubBD2A">JerAx</a>.
     </p>
   </footer>
 </body>
